Fix infinite recursion while dragging toolbar of QMainWindow.

Prevent recursion in QMainWindowLayout::endSeparatorMove().

Task-number: QTBUG-21378

Change-Id: Ie40005a35918d4da7ef911f8c3b1d1c3b5cf4fd2
Reviewed-by: Lars Knoll <lars.knoll@nokia.com>